# serializer version: 1
# name: test_async_connect
  [local >]
  00000000  00 00 00 15 31 2e 30 00 00 00 01 00 00 23 82 68  |....1.0......#.h|
  00000010  a6 a2 25 00 00 e7 7b 4e 54                       |..%...{NT|
  [local <]
  00000000  00 00 00 27 31 2e 30 00 00 00 01 00 00 00 17 68  |...'1.0........h|
  00000010  a6 a2 23 00 01 00 10 0b 84 77 ab 60 ab f4 e7 7d  |..#......w.`...}|
  00000020  ee 8a 24 84 3a 3d 59 92 64 e6 e4                 |..$.:=Y.d..|
  [local >]
  00000000  00 00 00 15 31 2e 30 00 00 23 83 00 00 23 84 68  |....1.0..#...#.h|
  00000010  a6 a2 26 00 02 28 c1 21 4d                       |..&..(.!M|
  [local <]
  00000000  00 00 00 27 31 2e 30 00 00 00 02 00 00 00 17 68  |...'1.0........h|
  00000010  a6 a2 24 00 03 00 10 46 a4 85 f5 ab 51 0d c5 88  |..$....F....Q...|
  00000020  38 0b 42 e5 ce 79 20 c4 49 0b 65                 |8.B..y .I.e|
# ---
# name: test_get_room_mapping
  [local >]
  00000000  00 00 00 15 31 2e 30 00 00 00 01 00 00 23 82 68  |....1.0......#.h|
  00000010  a6 a2 25 00 00 e7 7b 4e 54                       |..%...{NT|
  [local <]
  00000000  00 00 00 27 31 2e 30 00 00 00 01 00 00 00 17 68  |...'1.0........h|
  00000010  a6 a2 23 00 01 00 10 0b 84 77 ab 60 ab f4 e7 7d  |..#......w.`...}|
  00000020  ee 8a 24 84 3a 3d 59 92 64 e6 e4                 |..$.:=Y.d..|
  [local >]
  00000000  00 00 00 15 31 2e 30 00 00 23 83 00 00 23 84 68  |....1.0..#...#.h|
  00000010  a6 a2 26 00 02 28 c1 21 4d                       |..&..(.!M|
  [local <]
  00000000  00 00 00 27 31 2e 30 00 00 00 02 00 00 00 17 68  |...'1.0........h|
  00000010  a6 a2 24 00 03 00 10 46 a4 85 f5 ab 51 0d c5 88  |..$....F....Q...|
  00000020  38 0b 42 e5 ce 79 20 c4 49 0b 65                 |8.B..y .I.e|
  [local >]
  00000000  00 00 00 77 31 2e 30 00 00 23 85 00 00 23 86 68  |...w1.0..#...#.h|
  00000010  a6 a2 28 00 04 00 60 11 64 58 61 66 09 7d 21 08  |..(...`.dXaf.}!.|
  00000020  64 70 3c 8f 14 d9 1e 22 f2 1b a9 74 07 72 96 08  |dp<...."...t.r..|
  00000030  ea ee ea 7e 01 b8 08 9d 96 d5 fd d7 6b 0e e5 d6  |...~........k...|
  00000040  97 54 25 79 5d 33 63 3d e1 20 8d 3e fd 70 36 0b  |.T%y]3c=. .>.p6.|
  00000050  8d 68 3e 60 7a 40 15 c0 01 a6 53 22 b7 5d 4f ec  |.h>`z@....S".]O.|
  00000060  67 ae dd 7b ad 5d 1a 8a 02 be 1b 41 78 0d 93 a7  |g..{.].....Ax...|
  00000070  44 15 87 06 2b 2a 68 c8 08 3e 44                 |D...+*h..>D|
  [local <]
  00000000  00 00 00 77 31 2e 30 00 00 13 ba 00 00 00 17 68  |...w1.0........h|
  00000010  a6 a2 27 00 04 00 60 cb 85 58 ea da 93 e1 c2 ea  |..'...`..X......|
  00000020  30 e9 8d 8e 7b 7d b3 cd eb 9f 54 67 1a b4 d4 98  |0...{}....Tg....|
  00000030  ab 9c 6f 25 a9 cd 1f 04 a5 3c 1d 67 54 36 aa f1  |..o%.....<.gT6..|
  00000040  a5 ca 9e e7 8b f9 09 f8 ec 2d 57 f3 a6 7e 6e be  |.........-W..~n.|
  00000050  00 8d 14 c0 60 f7 c9 7f 15 7c 8e 8b d1 5d fb 14  |....`....|...]..|
  00000060  b7 4d 61 91 0c e0 1a 24 51 f9 77 04 27 cb d6 67  |.Ma....$Q.w.'..g|
  00000070  57 4e 20 7d 9b d9 53 b2 cc 4f 9e                 |WN }..S..O.|
# ---
